fixed overflow a responsive

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,6 +31,7 @@ header {
 }
 header div img {
 	margin-bottom: 20px;
+	max-width: 100%;
 }
 header nav ul {
 	margin: 0;
@@ -113,6 +114,11 @@ iframe {
 }
 
 /* TABELLE */
+.overflow-wrap {
+	max-width: 100%;
+	overflow-x: auto;
+}
+
 table {
 	margin-bottom: 2em;
 }
@@ -152,6 +158,7 @@ input {
 	padding: 5px;
 	border: 0;
 	border-bottom: 1px dashed #333;
+	width: 100%;
 }
 button {
 	padding: 4px 7px;
@@ -271,17 +278,19 @@ footer a {
 
 	iframe,
 	.news {
-		width: 50%;
+		width: calc(50% - 0.7rem);
 		display: inline-block;
-		margin-right: -4px;
 		margin-bottom: 0;
 	}
+
 	.news {
-		margin-top: -10px;
+		position: relative;
+		top: -17px;
+		margin-left: 0.7rem;
 	}
 
 	aside div {
-		width: 33.33333333%;
+		width: calc(100% / 3);
 		display: inline-block;
 		margin-right: -4px;
 	}
